Mudando texto de envio de sugestão

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- Sugestões -->
             <section class="section" id="sugestoes">
 
-                <a href="https://github.com/frontendbr/sugestoes/issues" class="box">Clique aqui para enviar uma sugestão!</a>
+                <a href="https://github.com/frontendbr/sugestoes/issues" class="box">Clique aqui para enviar sua sugestão!</a>
 
             </section>
 
